# Varaksha

./: .gitattributes  .gitignore  DEVLOG.md  Dockerfile  FIX_LIVE_API_UNAVAILABLE.md  PROJECT_FULL_AUDIT.md  README.md  SETUP_NOW.md  TEST_BRANCH_FIX_SUMMARY.md  docker-compose.yml  requirements.txt  start.sh  verify_backend_connection.py
.claude/: settings.json  settings.local.json
.wrangler/cache/: pages.json  wrangler-account.json
config/: .env.example
data/datasets/: README.md  prompt_injections.json
data/explainability/: shap_values_rf.npy
data/models/: amount_stats.json  feature_cols.json  injection_index.faiss  isolation_forest.onnx  isolation_forest.pkl  label_encoders.pkl  legit_memo_corpus.json  model_manifest.json  optimal_threshold.json  prompt_guard_metrics.json  random_forest.pkl  scaler.onnx  scaler.pkl  shap_explainer_rf.pkl  shap_explainer_xgb.pkl  training_metrics.json  voting_ensemble.pkl  xgboost.pkl
datasets/: datasets_readme.md
datasets/demo/: demo_readme.md
datasets/scripts/: compile_dataset.py  generate_dataset.py  scripts_readme.md
docs/architecture/: varaksha-flow-v2.html  varaksha-flow.html
docs/devlogs/: DEVLOG.md  current_state.md
docs/pitch/: varaksha-pitch-v2.html  varaksha-pitch.html  varaksha.html
frontend/: .gitignore  Dockerfile  frontend_readme.md  next.config.ts  nginx.conf  package-lock.json  package.json  tailwind.config.ts
frontend/app/: app_readme.md  globals.css  layout.tsx  page.tsx
frontend/app/components/: DashMapVisualizer.tsx  Tier3EdgeSim.tsx
frontend/app/flow/: page.tsx
frontend/app/lib/: api-config.ts
frontend/app/live/: CacheVisualizer.tsx  LegalReport.tsx  SecurityArena.tsx  page.tsx
frontend/app/tier3/: page.tsx
frontend/app/timeline/: page.tsx
frontend/public/datasets/: real_traffic.csv  synthetic_attack.csv
frontend/public/fonts/: README.md
gateway/: Cargo.toml  README.MD
gateway/rust-core/: Cargo.toml
gateway/rust-core/gateway/: Cargo.toml
gateway/rust-core/gateway/src/: gate.rs  lib.rs  main.rs  models.rs  privacy.rs  rate_limit.rs
gateway/rust-core/varaksha-bench/: Cargo.toml
gateway/rust-core/varaksha-bench/src/: attack_suite.rs  main.rs  report.rs
gateway/src/: dpr.rs  main.rs  models.rs
models/: ML_ARCHITECTURE.md  ML_LOGIC.md  feature_manifest.json  global_stats.json  isolation_forest.onnx  lgbm_sweeper.onnx  models_readme.md  training_stats.json
models/optimized/: isolation_forest.onnx  lgbm_sweeper.onnx
outputs/: outputs_readme.md
outputs/metrics/: metrics_readme.md
outputs/models/: models_readme.md
risk-cache/: .env.example  Cargo.toml  Dockerfile  railway.toml  risk-cache_readme.md  start_dev.bat  start_dev.sh
risk-cache/scripts/: demo_cache_proof.ps1
risk-cache/src/: audit.rs  auth.rs  cache.rs  cleaner.rs  config.rs  entry.rs  lib.rs  main.rs  metrics.rs  models.rs  rate_limiter.rs  src_readme.md
scripts/: adversarial_scan.py  build_injection_index.py  legal_report.py  scripts_readme.md  train_profiler.py  v2_battleground.py  workspace_diagnostic.py
security/gate-m/: .gitignore  README.md  benchmark.py  demo_rollback.py  pyproject.toml  security_benchmark.py
security/gate-m/gate/: __init__.py  cli.py  corrector.py  fanotify_watcher.py  kernel.py  models.py  os_watcher.py  sip_checker.py  snapshot.py  token.py  verifier.py
security/gate-m/gate/watcher/: Makefile  gate_watcher.c
security/gate-m/playground/secrets/: db_password.txt
security/gate-m/playground/src/: auth.py  models.py
security/gate-m/playground/tests/: test_auth.py
security/gate-m/tests/: test_integration.py  test_security.py  test_sip_checker.py
security_battleground/: runner.py
security_battleground/arenas/: fraud_arena.py  gate_m_arena.py  injection_arena.py
security_battleground/attacks/: fraud_attacks.json  gate_m_attacks.json  injection_attacks.json
security_battleground/report/: battleground_report.json
security_battleground/sandbox/src/: sample_agent.py
security_battleground/sandbox/tests/: test_sample.py
services/: services_readme.md
services/agents/: agent01_profiler.py  agent02_graph.py  agent03_accessible_alert.py  agent03_decision.py  agents_readme.md  pipeline.py  requirements.txt
services/api/: sidecar.py
services/demo/: app.py
services/graph/: graph_agent.py  graph_readme.md
services/local_engine/: infer.py  prompt_guard.py  train_ensemble.py
services/open_banking/: Dockerfile  __init__.py  feed_bridge.py  normalizer.py  plaid_adapter.py  railway.toml  setu_adapter.py
varaksha-v2-core/: 00_generate_indian_physics.py  01_compile_physics.py  02_forge_the_brain.py  03_live_streaming_gateway.py  varaksha-v2-core_readme.md
