[package]
name = "varaksha-gateway"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web   = "4"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
sha2        = "0.10"
hmac        = "0.12"
hex         = "0.4"
tokio       = { version = "1", features = ["full"] }
log         = "0.4"
env_logger  = "0.11"
uuid        = { version = "1", features = ["v4"] }
reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

dashmap    = "5"

risk-cache = { path = "../risk-cache" }