[package]
name = "risk-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
dashmap = "6.1.0"
ort = { version = "2.0.0-rc.10", features = ["ndarray", "load-dynamic"] }
ndarray = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
hex = "0.4.3"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time"] }
log = "0.4.28"
env_logger = "0.11"
hmac = "0.12"