[workspace]
members = ["gateway", "varaksha-bench"]
resolver = "2"

[workspace.package]
version    = "0.1.0"
edition    = "2021"
authors    = ["Varaksha Team"]
license    = "MIT"

[workspace.dependencies]
# Crypto
hmac             = "0.12"
sha2             = "0.10"
ed25519-dalek    = { version = "2", features = ["rand_core"] }
rand             = "0.8"
hex              = "0.4"

# Web
actix-web        = "4"
actix-rt         = "2"
tokio            = { version = "1", features = ["full"] }

# Serialisation
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"

# Concurrency / rate-limiting
dashmap          = "5"

# Logging
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono           = { version = "0.4", features = ["serde"] }

# Error handling
thiserror        = "1"
anyhow           = "1"

# PDF generation (bench report)
printpdf         = "0.7"
uuid             = { version = "1", features = ["v4"] }
