[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gate-m"
version = "0.1.0"
description = "Linux-only OS+Python kernel wrapper for agent filesystem safety"
requires-python = ">=3.11"
dependencies = [
    "inotify-simple>=1.3.5",
    "whatthepatch>=1.0.4",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[project.scripts]
gate-m = "gate.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gate*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
