[package]
name    = "varaksha-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "varaksha-gw"
path = "src/main.rs"

[lib]
name  = "varaksha_gateway"
crate-type = ["cdylib", "rlib"]  # cdylib for PyO3

[features]
# bench-mode exposes /test/art-harness — NEVER enable in production builds
bench-mode = []

[dependencies]
# Workspace-level
hmac.workspace             = true
sha2.workspace             = true
ed25519-dalek.workspace    = true
rand.workspace             = true
hex.workspace              = true
actix-web.workspace        = true
actix-rt.workspace         = true
tokio.workspace            = true
serde.workspace            = true
serde_json.workspace       = true
dashmap.workspace          = true
tracing.workspace          = true
tracing-subscriber.workspace = true
chrono.workspace           = true
thiserror.workspace        = true
anyhow.workspace           = true
uuid.workspace             = true

# HTTP client for forwarding sanitized transactions to Python agent 01
reqwest    = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# PyO3 — Python bindings (allow Rust crypto to be called from LangGraph agents)
# Non-optional: the cdylib target always builds the Python extension.
pyo3       = { version = "0.21", features = ["extension-module"] }

[dev-dependencies]
actix-web  = { version = "4", features = ["macros"] }
