[package]
name    = "varaksha-bench"
version.workspace = true
edition.workspace = true

[[bin]]
name = "varaksha-bench"
path = "src/main.rs"

[dependencies]
# Workspace-level
serde.workspace        = true
serde_json.workspace   = true
hex.workspace          = true
chrono.workspace       = true
uuid.workspace         = true
thiserror.workspace    = true
anyhow.workspace       = true
tracing.workspace      = true
tracing-subscriber.workspace = true
printpdf.workspace     = true

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP client (send adversarial payloads to running gateway)
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }

# Ed25519 for report signing
ed25519-dalek.workspace = true
rand.workspace          = true
